--- a/templates/community/register_government.html
+++ b/templates/community/register_government.html
@@ -1,5 +1,5 @@
 {% extends "community/base.html" %}
-{% block content %}
+{% block content %}<!-- Main content block for the registration page for government officials -->
 <body>
     <h2 class="header"> Register as a Government Official </h2>
     {% load crispy_forms_tags %}
