--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -1,8 +1,10 @@
-{% load static %}
+{% load static %} <!-- Loads Django's static files tag for CSS, JavaScript, or images -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
+        <!-- Metadata and stylesheets for the webpage -->
+    <!-- ... Meta tags and links to stylesheets ... -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Community Center {% endblock title %}</title>
@@ -14,6 +16,8 @@
 </head>
 
 <body>
+            <!-- Navbar structure with links to different pages -->
+        <!-- ... Navbar content ... -->
     <header class="carousel-inner">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light ">
@@ -53,9 +57,10 @@
 
     <!-- Place for page content -->
     {% endblock content %}
+   <!-- Footer content with copyright notice and social media links -->
+        <!-- ... Footer content ... -->
 
-
-    <!-- Footer Section -->
+    
     <footer class="footer  mt-4 py-3 carousel-inner">
         <div class="container" class="carousel-inner">
             <!-- Flex container for aligning footer content -->
@@ -124,7 +129,7 @@
             </div>
         </div>
     </footer>
-
+ <!-- Loading FontAwesome and Bootstrap scripts -->
     <script src="https://kit.fontawesome.com/11665d5c0d.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
