--- a/templates/community/events/event_detail.html
+++ b/templates/community/events/event_detail.html
@@ -1,8 +1,8 @@
 <!-- Event Detail -->
-<h1>{{ event.title }} </h1>
-<p> {{ event.description }} </p>
-<p>Date: {{ event.date }}</p>
-<p>Start Time : {{ event.time }}</p>
-<p> Capacity: {{ event.capacity }}</p>
-<p> Cost:  </p>
-<img src="{{ event.image.url }}" alt="Event Iamge">
+<h1>{{ event.title }} </h1> <!-- Display event title -->
+<p> {{ event.description }} </p> <!-- Display event description -->
+<p>Date: {{ event.date }}</p> <!-- Display event date -->
+<p>Start Time : {{ event.time }}</p> <!-- Display event start time -->
+<p> Capacity: {{ event.capacity }}</p> <!-- Display event capacity -->
+<p> Cost:  </p> <!-- Placeholder for event cost -->
+<img src="{{ event.image.url }}" alt="Event Iamge"> <!-- Display event image -->
