--- a/templates/community/gallery.html
+++ b/templates/community/gallery.html
@@ -6,12 +6,15 @@
 <main id="main-background">
 <div class="container mt-4"> <h1>Gallery</h1> 
 <div class="row">
+     <!-- Looping through events with images -->
     {% for event in events_with_images %}
     <div class="col-md-4 ">
         <div class="card mb-4  ">
+            <!-- Displaying the event image -->
             <img src ="{{ event.image.url }}" class="card-img-top" alt="{{  event.title }}">
             <div class="card-body">
                 <h5 class="card-title"> {{ event.title }} </h5>
+                <!-- Checking if the user is authenticated and is the author of the event to show delete option -->
                 {% if user.is_authenticated and user == event.author.user %}
                 <a href="{% url 'delete_event_image' event.id %}" class="btn btn-danger" > Delete image </a>
                 {% endif %}
