--- a/templates/community/register_instructor.html
+++ b/templates/community/register_instructor.html
@@ -1,5 +1,5 @@
 {% extends "community/base.html" %}
-{% block content %}
+{% block content %}<!-- Main content block for the registration page for instructor -->
 <body>
     <h2 class="header"> Register as an Instructor </h2>
     {% load crispy_forms_tags %}
