--- a/templates/community/register_public.html
+++ b/templates/community/register_public.html
@@ -1,5 +1,5 @@
 {% extends "community/base.html" %}
-{% block content %}
+{% block content %}<!-- Main content block for the registration page for public -->
 <body>
     <h2 class="header"> Register as a user  </h2>
     {% load crispy_forms_tags %}
