--- a/templates/community/booking.html
+++ b/templates/community/booking.html
@@ -34,11 +34,11 @@
                                     {% endif %}
                                  <!-- Handling user booking status -->
                                 {% if event.id in user_bookings %}
-                                <button class="btn btn-secondary btn-sm disabled"> Joined </button>
+                                <button class="btn btn-secondary btn-sm standard disabled"> Joined </button>
                            
 
                             {% elif user.profile.role  in 'INSTRUCTOR,GOVERNMENT_OFFICIAL' %}
-                            <button class="btn btn-secondary btn-sm disabled"> No Access </button>
+                            <button class="btn btn-secondary btn-sm standard disabled"> No Access </button>
                             {% else %}
 
                             <!-- Join event link with onclick event for confirmation -->
