--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -104,7 +104,7 @@
                                 <span class="visually-hidden">Previous</span>
                             </button>
 
-                            <button class="carousel-control-next" id="carousel-button" type="button"
+                            <button class="carousel-control-next standard opacity-0.05 " id="carousel-button" type="button"
                                 data-bs-target="#bannerCarousel" data-bs-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
