--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -1,9 +1,10 @@
-{% load static %} <!-- Loads Django's static files tag for CSS, JavaScript, or images -->
+{% load static %}
+<!-- Loads Django's static files tag for CSS, JavaScript, or images -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-        <!-- Metadata and stylesheets for the webpage -->
+    <!-- Metadata and stylesheets for the webpage -->
     <!-- ... Meta tags and links to stylesheets ... -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,8 +17,8 @@
 </head>
 
 <body>
-            <!-- Navbar structure with links to different pages -->
-        <!-- ... Navbar content ... -->
+    <!-- Navbar structure with links to different pages -->
+    <!-- ... Navbar content ... -->
     <header class="carousel-inner">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light ">
@@ -41,7 +42,7 @@
                             {% if user.is_authenticated %}
                             <a class="nav-link" href="{% url 'booking' %}"> Booking </a>
                             {% else %}
-                            
+
                             {% endif %}
                         </li>
                     </ul>
@@ -57,22 +58,23 @@
 
     <!-- Place for page content -->
     {% endblock content %}
-   <!-- Footer content with copyright notice and social media links -->
-        <!-- ... Footer content ... -->
+    <!-- Footer content with copyright notice and social media links -->
+    <!-- ... Footer content ... -->
 
-    
-    <footer class="footer  mt-4 py-3 carousel-inner">
-        <div class="container" class="carousel-inner">
+
+    <!-- Footer Section -->
+    <footer class="footer bg-light m-0 ">
+        <div class="container pt-3 pb-2">
             <!-- Flex container for aligning footer content -->
-            <div class="row ">
+            <div class="row">
                 <!-- Copyright Notice: Visible only on md screens and above -->
                 <div class=" d-none d-md-flex  col-6    text-center  mb-3 ">
                     <span class="text-muted"> &copy; 2023 Jesse Ross</span>
                 </div>
                 <!-- Spacer Div: Adjusts space on larger screens -->
-                <div class="d-none d-md-flex col-3 col-lg-4 justify-content-end"></div>
+
                 <!-- Social Media Links: Visible only on md screens and above -->
-                <div class="d-none d-md-flex  col-3 col-lg-2 mt-1 ">
+                <div class="d-none d-md-flex  col-6  mt-1 justify-content-end ">
                     <!-- Twitter Link -->
                     <div class="col-1">
                         <a href="https://twitter.com" target="_blank" class="text-muted me-2">
@@ -82,12 +84,7 @@
                     <!-- Instagram Link -->
                     <div class="col-1">
                         <a href="https://instagram.com" target="_blank" class="text-muted me-2">
-                            <button class="Btninstagram">
-                            <span class="svgContainer">
-                              <svg fill="white" class="svgIcon" viewBox="0 0 448 512" height="1.5em" xmlns="http://www.w3.org/2000/svg"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
-                            </span>
-                            <span class="BG"></span>
-                           </button>
+                            <i class="fab fa-instagram"></i>
                         </a>
                     </div>
                     <!-- Facebook Link -->
@@ -113,12 +110,7 @@
                     </a>
 
                     <a href="https://instagram.com" target="_blank" class="text-muted m-2">
-                        <button class="Btninstagram">
-                            <span class="svgContainer">
-                              <svg fill="white" class="svgIcon" viewBox="0 0 448 512" height="1.5em" xmlns="http://www.w3.org/2000/svg"><path d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"></path></svg>
-                            </span>
-                            <span class="BG"></span>
-                           </button>
+                        <i class="fab fa-instagram"></i>
                     </a>
 
                     <a href="https://facebook.com" target="_blank" class="text-dark m-2">
@@ -138,8 +130,9 @@
                 </div>
             </div>
         </div>
+    </div>
     </footer>
- <!-- Loading FontAwesome and Bootstrap scripts -->
+    <!-- Loading FontAwesome and Bootstrap scripts -->
     <script src="https://kit.fontawesome.com/11665d5c0d.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
