--- a/templates/community/base.html
+++ b/templates/community/base.html
@@ -19,7 +19,7 @@
 <body>
     <!-- Navbar structure with links to different pages -->
     <!-- ... Navbar content ... -->
-    <header class="carousel-inner">
+    <header class="navbar-heading bg-light z-3">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light ">
                 <a class="navbar-brand" href="{% url 'home' %}"> Community Center </a>
