--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -5,29 +5,35 @@
 
 
 
-<main id="main-background">
-    <div class="row">
-        <div
-            class="col-11 row  carousel-inner d-flex justify-content-center align-items-center pb-5 border-0 rounded m-1">
+<main id="main-background" class="pt-5 ">
+    
+        <div  class="col-12 row   d-flex justify-content-center align-items-center pb-5 border-0 rounded m-1">
 
  <!-- Title and user-specific greeting -->
-            <div class="col-12 container mt-4 d-flex justify-content-center ">
+            <div class="col-8 container mt-4 d-flex justify-content-center ">
                 <h1> Welcome to the Community Center</h1>
             </div>
             <div class="col-12  align-items-center text-center mt-3">
-                <p><!-- Check if user is authenticated -->
+                <p class="leading "><!-- Check if user is authenticated -->
                     {% if user.is_authenticated %}
 
                     Hi , {{ user.profile }} <!-- Display 'Create an Event' option for certain user roles -->
+                </div>
+                    <div class="col-12 d-flex justify-content-between align-items-center">
                     {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
+                    <div class="col-12 row  d-flex justify-content-center align-items-center">
+                        <div class="col-12 col-md-6 justify-content-center align-items-center"> 
                     <a href="{% url 'create_event' %}"><button>
                             <span class="button_top"> Create an Event </span>
                         </button> </a>
+                        </div>
                     {% endif %}
+                    <div class="col-12 col-md-6 justify-content-center align-items-center "> 
                     <a href="{% url 'logout' %}"> <button>
                             <span class="button_top"> Logout </span>
                         </button> </a>
-
+                    </div>
+                    </div>
                     {% else %}
                     <!-- Login and sign up options for unauthenticated users -->
                     <div>
