Test UX for homepage

--- a/templates/community/about.html
+++ b/templates/community/about.html
@@ -46,7 +46,7 @@
               <div class="carousel-item active">
                 <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575274/admin-image-person_qlayeg.jpg"
                   class="d-block w-100 carousel-image" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-lg-block">
                   <h5>Admin : Sarah Wang </h5>
                   <p> I am here for any query or concerns you might have.</p>
                 </div>
@@ -54,7 +54,7 @@
               <div class="carousel-item">
                 <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575091/cleaner-image_kmjx4i.jpg"
                   class="d-block w-100" alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-lg-block">
                   <h5> Cleaner : Tamie Hamilton </h5>
                   <p> I keep our community center spotless and welcoming.</p>
                 </div>
@@ -62,7 +62,7 @@
               <div class="carousel-item">
                 <img src="https://res.cloudinary.com/dwz6t9jry/image/upload/v1700575161/maintenanceguy-image_lm0rsy.jpg"
                   class="d-block w-100 carousel-image " alt="...">
-                <div class="carousel-caption d-none d-md-block">
+                <div class="carousel-caption d-none d-lg-block">
                   <h5>Maintenance : Mark Hamilton </h5>
                   <p> They call me bob the builder , no problem I can't fix.</p>
                 </div>
