--- a/templates/community/home.html
+++ b/templates/community/home.html
@@ -217,14 +217,14 @@
                 {% endif %} </p>
         </div>
         {% if user.profile.role == 'INSTRUCTOR' or user.profile.role == 'GOVERNMENT' %}
-        <div class="mt-4 col-6   d-flex justify-content-center align-items-center  ">
+        <div class="mt-4 col-6   d-flex justify-content-end align-items-center  ">
 
             <a href="{% url 'create_event' %}"><button>
                     <span class="button_top"> Create an Event </span>
                 </button> </a>
         </div>
 
-        <div class=" mt-4   col-6 d-flex justify-content-center align-items-center ">
+        <div class=" mt-4   col-6 d-flex justify-content-start align-items-center ">
             <a href="{% url 'logout' %}"> <button>
                     <span class="button_top"> Logout </span>
                 </button> </a>
@@ -310,7 +310,7 @@
                     <div class="row p-1 d-flex justify-content-center  ">
                         <div class="col-6 ">
                             {% if event.capacity < 60 %}
-                            <a href="{% url  'update_event' event.id %}"> <button class=" ms-md-4 standard"> Update
+                            <a href="{% url  'update_event' event.id %}"> <button class=" ms-md-1 ms-lg-3 standard"> Update
                                 </button> </a>
                             {% else %}
                             <a href="{% url  'update_event' event.id %}"> <button class="standard"> Update </button>
@@ -321,7 +321,7 @@
                             {% if event.capacity >= 60 %}
                             <a href="{% url 'delete_event' event.id %}"><button class="standard"> Delete </button> </a>
                             {% else %}
-                            <p> Event deletion is disabled after public booking of course </p>
+                            <p class="ms-md-1"> Event deletion is disabled after public booking of course </p>
                             <button class="btn btn-danger standard disabled">Delete </button>
                             {% endif %}
                         </div>
