--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,9 +1,11 @@
 {% extends "community/base.html" %}
 {% block content %}
 {% load crispy_forms_tags %}
-<form method = 'post'>
+<main class="mt-5 d-flex justify-content-center align-content-center">
+<form method = 'post' class="mt-3">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit"> Login </button>
+    <button class="mt-3 standard" type="submit"> Login </button>
 </form>
+</main>
 {% endblock %}
